fix(ui): fix extra padding on the right of the locale switcher dropdown (#1256)
* feat: reduce the horizontal padding to 1rem

* feat: add padding right to 1rem on locale switcher

--- a/packages/layout/src/assets/css/components/layout/header-menu.css
+++ b/packages/layout/src/assets/css/components/layout/header-menu.css
@@ -55,6 +55,10 @@ ul.dz-user-menu li span.dz-user-menu-item > i {
     flex-direction: row;
   }
 
+  .dz-layout .dz-header-menu > .dz-locale-switcher .dz-dropdown-menu-trigger {
+    padding: 0.65rem;
+  }
+
   .dz-layout .dz-header-menu > ul.dz-user-menu {
     flex-direction: row;
   }
